--- a/day8/Cargo.toml
+++ b/day8/Cargo.toml
@@ -17,5 +17,6 @@ anyhow = "1.0.75"
 lazy_static = "1.4.0"
 nom = "7.1.3"
 nom-supreme = "0.8.0"
+num = { version = "0.4.1", features = ["num-bigint"] }
 regex = "1.10.2"
 rstest = "0.18.2"
